# mailslurp-client-rust

./: Cargo.toml  Cargo.toml.tmp  README.md
.openapi-generator/: FILES
docs/: AbstractWebhookPayload.md  Alias.md  AliasControllerApi.md  AliasDto.md  AliasProjection.md  AliasVerificationResult.md  AttachmentControllerApi.md  AttachmentEntity.md  AttachmentMetaData.md  AttachmentProjection.md  BasicAuthOptions.md  Bounce.md  BounceControllerApi.md  BounceProjection.md  BounceRecipient.md  BouncedEmailDto.md  BouncedRecipientDto.md  BulkActionsControllerApi.md  BulkSendEmailOptions.md  CommonActionsControllerApi.md  ConditionOption.md  ContactControllerApi.md  ContactDto.md  ContactProjection.md  ContentMatchOptions.md  CreateAliasOptions.md  CreateAnonymousAliasOptions.md  CreateContactOptions.md  CreateDomainOptions.md  CreateGroupOptions.md  CreateInboxDto.md  CreateInboxForwarderOptions.md  CreateInboxRulesetOptions.md  CreateOwnedAliasOptions.md  CreateTemplateOptions.md  CreateTrackingPixelOptions.md  CreateWebhookOptions.md  DescribeDomainOptions.md  DescribeMailServerDomainResult.md  DnsLookupOptions.md  (+127 more)
src/apis/: alias_controller_api.rs  attachment_controller_api.rs  bounce_controller_api.rs  bulk_actions_controller_api.rs  client.rs  common_actions_controller_api.rs  configuration.rs  contact_controller_api.rs  domain_controller_api.rs  email_controller_api.rs  expired_controller_api.rs  export_controller_api.rs  form_controller_api.rs  group_controller_api.rs  inbox_controller_api.rs  inbox_forwarder_controller_api.rs  inbox_ruleset_controller_api.rs  mod.rs  (+7 more)
(+146 files in other folders)
